# protolink

./: CMakeLists.txt  package.xml  protolink_ament_cmake-extras.cmake
cmake/: .gitignore  add_protolink_message.cmake  generate_proto.py  template_converter.cpp.jinja  template_converter.hpp.jinja
include/protolink/: client.hpp  type_adapter.hpp
src/: client.cpp
test/: test.cpp
