<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>protolink</name>
  <version>0.0.0</version>
  <description>Communication library between ROS 2 / microcontrollers.</description>
  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>ament_cmake_auto</depend>
  <depend>boost</depend>
  <depend>libnanopb-dev</depend>
  <depend>libpaho-mqttpp-dev</depend>
  <depend>protobuf-dev</depend>
  <depend>protobuf</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>python3-jinja2</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
